<resources>
    <string name="app_name">MedFinder</string>
    <string name="firebase_database_url">https://medfinder-1a729-default-rtdb.asia-southeast1.firebasedatabase.app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_user_full_name">User Full Name</string>
    <string name="nav_user_email">user@email.com</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search_by_department">Search By Department</string>
    <string name="menu_search_by_doctor">Search By Doctor</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_view_profile">View Profile</string>
    <string name="dialog_logout_confirmation">Are you sure you want to logout?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="password_required">Password is required</string>
    <string name="email_required">Email is required</string>
    <string name="progress_dialog_placeholder_text">Loading…</string>
    <string name="logging_in_progress_text">Logging in…</string>
    <string name="logging_out_progress_text">Logging out…</string>
    <string name="signing_up_progress_text">Signing up…</string>
    <string name="login_title">LOGIN</string>
    <string name="login_text">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_text">Remember Me</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_email_sent">Password reset email sent! Check your inbox</string>
    <string name="reset_email_failed">Failed to send password reset email</string>
    <string name="sign_up_title">Create an Account</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="select_gender_prompt">Select Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="first_name_required">First Name is required</string>
    <string name="last_name_required">Last Name is required</string>
    <string name="confirm_password_required">Confirm Password is required</string>
    <string name="confirm_password_does_not_match">Passwords do not match</string>
    <string name="gender_required">Gender is required</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="update_profile_text">Update Profile</string>
    <string name="change_password_text">Change Password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="new_password_hint">New Password</string>
    <string name="menu_change_profile_picture">Change Profile Picture</string>
    <string name="dr_name_placeholder">Dr Full Name</string>
    <string name="department">Department</string>
    <string name="location">Location</string>
    <string name="call">Call</string>
    <string name="get_directions">Get Directions</string>
    <string name="department_hint">Department Name</string>
    <string name="doctor_hint">Doctor Name</string>
    <string name="hospital">Hospital</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="label_doctors_in_department">Doctors in {departmentName}</string>
    <string name="label_doctor_profile">Doctor Profile</string>
    <string name="visit_website">Visit Website</string>
    <string name="call_emergency_hotline">Call Emergency Hotline 999?</string>
    <string name="emergency_call">Call Emergency Hotline</string>
    <string name="clinic_hours">Clinic Hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="closed">Closed</string>
    <string name="reason_for_visit">Reason for visit</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="select_a_time">Select a time</string>
    <string name="error_day_unavailable">No appointments are available for the selected day</string>
    <string name="error_loading_doctor">Invalid Doctor</string>
    <string name="error_loading_department">Invalid Department</string>
    <string name="error_loading_date_time">Invalid date and time</string>
    <string name="menu_upcoming_appointments">Upcoming Appointments</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="reason_for_visit_camel_case">Reason For Visit</string>
    <string name="appointment_detail_title_placeholder">Doctor Visit</string>
    <string name="dialog_cancel_appointment_confirmation">Cancel this appointment?</string>
    <string name="menu_appointment_history">Appointment History</string>
    <string name="doctors_remarks">Doctor\'s Remarks</string>
    <string name="menu_find_doctor">Find A Doctor</string>
    <string name="explore_departments">Explore Departments</string>
    <string name="search_for_doctor">Search For Doctors</string>
    <string name="explore_departments_description">Explore various medical departments and find the right specialist</string>
    <string name="search_for_doctor_description">Find the right doctor using a variety of search criteria</string>
</resources>