<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_doctor"
            android:icon="@drawable/ic_menu_doctor"
            android:title="@string/menu_find_doctor" />
        <item
            android:id="@+id/nav_upcoming_appointments"
            android:icon="@drawable/ic_menu_upcoming_appointments"
            android:title="@string/menu_upcoming_appointments" />
        <item
            android:id="@+id/nav_appointment_history"
            android:icon="@drawable/ic_menu_appointment_history"
            android:title="@string/menu_appointment_history" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>