<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_find_doctor">

    <fragment
        android:id="@+id/nav_find_doctor"
        android:name="com.blinkfrosty.medfinder.ui.finddoctor.FindDoctorFragment"
        android:label="@string/menu_find_doctor"
        tools:layout="@layout/fragment_find_doctor" >
        <action
            android:id="@+id/action_find_doctor_to_search_by_department"
            app:destination="@id/nav_search_by_department" />
        <action
            android:id="@+id/action_find_doctor_to_search_by_doctor"
            app:destination="@id/nav_search_by_doctor" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_by_department"
        android:name="com.blinkfrosty.medfinder.ui.department.SearchByDepartmentFragment"
        android:label="@string/menu_search_by_department"
        tools:layout="@layout/fragment_search_by_department" />

    <fragment
        android:id="@+id/nav_search_by_doctor"
        android:name="com.blinkfrosty.medfinder.ui.doctor.SearchByDoctorFragment"
        android:label="@string/menu_search_by_doctor"
        tools:layout="@layout/fragment_search_by_doctor" />
</navigation>