<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/logout_dialog_text_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_logout_confirmation"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logout_dialog_button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:theme="@style/Button.Red"
        android:text="@string/dialog_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout_dialog_text_confirmation" />

    <Button
        android:id="@+id/logout_dialog_button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_no"
        app:layout_constraintTop_toBottomOf="@id/logout_dialog_text_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>